cms/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: config-ingressroute
spec:
  routes:
  - match: PathPrefix(`/v1/config/dns`)
    kind: Rule
    middlewares:
    - name: authz
    services:
    - name: config-managment-service
      port: 8081

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
   name: authz
spec:
   forwardAuth:
           address: http://authorization-service.default.svc.cluster.local:8080

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: auth
# spec:
#   basicAuth:
#     secret: authsecret

# ---
# # Note: in a kubernetes secret the string (e.g. generated by htpasswd) must be base64-encoded first.
# # To create an encoded user:password pair, the following command can be used:
# # htpasswd -nb user password | openssl base64

# apiVersion: v1
# kind: Secret
# metadata:
#   name: authsecret
#   namespace: default

# data:
#   users: |2
#     dGVzdDokYXByMSRINnVza2trVyRJZ1hMUDZld1RyU3VCa1RycUU4d2ovCnRlc3QyOiRhcHIxJGQ5
#     aHI5SEJCJDRIeHdnVWlyM0hQNEVzZ2dQL1FObzAK
